[project]
name = "mcp-server-deployment"
version = "0.0.1"
description = "My dumb mcp server deployment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.24.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]